--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "parcel src/index.html"
+        "start": "parcel serve src/index.html"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^16.6.2",
-        "parcel": "^2.0.0-rc.0",
+        "parcel-bundler": "^1.12.5",
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "bootstrap": "^5.1.0",
         "rxjs": "^7.3.0"
     }
 }
