--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/jquery": "^3.5.6",
         "@types/node": "^16.6.2",
         "parcel-bundler": "^1.12.5",
         "prettier": "^2.3.2",
@@ -18,6 +19,7 @@
     "dependencies": {
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
+        "jquery": "^3.6.0",
         "rxjs": "^7.3.0",
         "style.css": "^1.0.0"
     }
