--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "parcel build src/index.html",
         "start": "parcel serve src/index.html"
     },
     "keywords": [],
